# scholar-archive

./: .gitignore  0db0310e-6f96-46bc-9151-a50b36421a76.pkl  CMakeLists.txt  README.md  all.pkl  app.json  combine_meta.py  crawl_data.py  crawler.py  create.py  data.pkl  db.c  dns.c  dns.h  gui.py  main.c  main.py  package.json  requirements.txt  settings.gradle.kts  setup.py  test.ipynb  test_main.http  utils.c  utils.h
acm/: __init__.py  acmdb.py  manager.py  sql_queries.py  utils.py  values.py
app/: _layout.tsx  build.gradle.kts  keeper.tsx
chatflow/: tributary.py
data/: news.pkl  news_flashes.pkl  raw.pkl
docs/: BNF.md  async.md  context.md  examples.md  executors.md  index.md  interpreter.md  quick-start.md  references.md  statement.md  structure.md  test.md
examples/: guess.py
include/: Lexer.h  LexerException.h
mp2c/: result.py  utils.py  visitors.py
projects/SemanticAnalysis/: .gitignore  CMakeLists.txt  README.md
projects/SemanticAnalysis/include/: utils.h
projects/SemanticAnalysis/src/: LL1Grammar.cpp  LL1Grammar.h  LR1Grammar.h
projects/SimplePythonLexer/: CMakeLists.txt
projects/SimplePythonLexer/include/: data.h  enum.h  utils.h
projects/SimplePythonLexer/src/: main.cpp
projects/SimplePythonLexer/src/handlers/: alphaHandler.cpp  punctuationHandler.cpp  stringHandler.cpp
src/: Grammar.cpp  Grammar.h  LR1Grammar.cpp  Lexer.cpp  LexerException.cpp  data.cpp  main.cpp  utils.cpp
test/: test_array.py  test_comprehensive.py
tests/: test_branch.flow  test_combined.py  test_handover.flow  test_handover.py  test_match.flow  (+3 more)
(+77 files in other folders)
